fix(header): set z index of header to not be sure no components are visible over it

--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -3,4 +3,5 @@ header {
   top: 0;
   width: 100%;
   background-color: white;
+  z-index: 99;
 }
